// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <FadeIn
    key="0"
  >
    <Section
      hasPadding={false}
    >
      <Tile
        heading="Personal Details"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaCheck />
              <span>
                Completed
              </span>
            </div>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaCheck />
          <span>
            Completed
          </span>
        </div>
      </Tile>
    </Section>
  </FadeIn>
  <FadeIn
    key="1"
  >
    <Section
      hasPadding={false}
    >
      <Tile
        heading="Primary ID"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaTimes />
          <span>
            Incomplete
          </span>
        </div>
      </Tile>
    </Section>
  </FadeIn>
  <FadeIn
    key="2"
  >
    <Section
      hasPadding={false}
    >
      <Tile
        heading="Secondary ID"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaCheck />
              <span>
                Completed
              </span>
            </div>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaCheck />
          <span>
            Completed
          </span>
        </div>
      </Tile>
    </Section>
  </FadeIn>
  <FadeIn
    key="3"
  >
    <Section
      hasPadding={false}
    >
      <Tile
        heading="Address Information"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaTimes />
          <span>
            Incomplete
          </span>
        </div>
      </Tile>
    </Section>
  </FadeIn>
  <FadeIn
    key="4"
  >
    <Section
      hasPadding={false}
    >
      <Tile
        heading="Declaration Risk Management"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaTimes />
          <span>
            Incomplete
          </span>
        </div>
      </Tile>
    </Section>
  </FadeIn>
  <FadeIn
    key="5"
  >
    <Section
      hasPadding={false}
    >
      <Tile
        heading="Report"
        menu={
          <div>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              View
            </Button>
          </div>
        }
      />
    </Section>
  </FadeIn>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Loader />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<ErrorBoundary>
  <Connect(AMLProgressBar) />
  <Section
    hasBackground={false}
  >
    <FadeIn
      key="0"
    >
      <Section
        hasPadding={false}
      >
        <Tile
          heading="Personal Details"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaCheck />
                <span>
                  Completed
                </span>
              </div>
              <Button
                type="button"
                variant="primary"
              >
                Edit
              </Button>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </Section>
    </FadeIn>
    <FadeIn
      key="1"
    >
      <Section
        hasPadding={false}
      >
        <Tile
          heading="Primary ID"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
              <Button
                type="button"
                variant="primary"
              >
                Edit
              </Button>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </Tile>
      </Section>
    </FadeIn>
    <FadeIn
      key="2"
    >
      <Section
        hasPadding={false}
      >
        <Tile
          heading="Secondary ID"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaCheck />
                <span>
                  Completed
                </span>
              </div>
              <Button
                type="button"
                variant="primary"
              >
                Edit
              </Button>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </Section>
    </FadeIn>
    <FadeIn
      key="3"
    >
      <Section
        hasPadding={false}
      >
        <Tile
          heading="Address Information"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
              <Button
                type="button"
                variant="primary"
              >
                Edit
              </Button>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </Tile>
      </Section>
    </FadeIn>
    <FadeIn
      key="4"
    >
      <Section
        hasPadding={false}
      >
        <Tile
          heading="Declaration Risk Management"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
              <Button
                type="button"
                variant="primary"
              >
                Edit
              </Button>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </Tile>
      </Section>
    </FadeIn>
    <FadeIn
      key="5"
    >
      <Section
        hasPadding={false}
      >
        <Tile
          heading="Report"
          menu={
            <div>
              <Button
                type="button"
                variant="primary"
              >
                View
              </Button>
            </div>
          }
        />
      </Section>
    </FadeIn>
  </Section>
  <withRouter(ProfileModal)
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</ErrorBoundary>
`;
